# general-nvgpu-testing

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  pytorch.py  requirements.txt
cuda/: CMakeLists.txt  cublas.cc  cublas.cu  cutlass.cu  cutlass_cute.cu  cutlass_manual_tune.cu  cutlass_tmp.cu  interface.cc  main.cc
cuda/cute_kernels/: cute_gemm.cu  cute_gemm_128x128.cu  cute_gemm_128x256.cu  cute_gemm_ln.cu  main.cc
cuda/cutlass_kernels/: cutlass_gemmrc.cu  cutlass_gemmrc_splitk.cu  main.cc
cuda/include/: cuda_utils.h  cutlass_utils.h  gemm_utils.h  torch_utils.h
cuda/tk_kernels/: tk_gemm.cu
python/: acre.pyi  attn_flops.py  gemm_test.py  parallel.py  pytorch.py
python/beam/: __init__.py  __init__.pyi  beam_C.pyi  tuner.py  tuner.pyi
python/beam/_C/: __init__.py  __init__.pyi  beam_C.pyi
python/beam/triton_kernels/: __init__.py  __init__.pyi  gemm.py  gemm.pyi
python/triton_kernels/: gemm.py
scripts/: gemm_bound.py
